--- a/css/style.css
+++ b/css/style.css
@@ -82,11 +82,11 @@ body {
 	background-color: #ffffff;
 }
 
-#content-0 {
+#content-0, #content-1 {
 	position: absolute;
 }
 
-#content-1, #content-2, #content-3, #content-4 {
+#content-2, #content-3, #content-4 {
 	position: absolute;
 	display: none;
 }
