--- a/css/style.css
+++ b/css/style.css
@@ -7,12 +7,8 @@ body {
 	overflow-x: hidden;
 }
 
-.barba-container {
-
-}
-
 .groupup {
-	position: absolute;
+	position: fixed;
 }
 
 #about_home, #about_work {
