--- a/css/style.css
+++ b/css/style.css
@@ -5,7 +5,7 @@ html {
 body {
 	margin: 0px;
 	overflow-x: hidden;
-	cursor: url("pointer.png"), auto;
+	cursor: url("pointer.png"), invert;
 }
 
 .groupup {
