--- a/css/animate.css
+++ b/css/animate.css
@@ -3636,3 +3636,39 @@
     transition: none !important;
   }
 }
+
+/* My animations*/
+
+@keyframes shrink {
+  from {
+	height: 600px;
+	width: 600px;
+  }
+
+  to {
+	height: 400px;
+	width: 400px;
+  }
+}
+
+.shrink_circle {
+  -webkit-animation-name: shrink;
+  animation-name: shrink;
+}
+
+@keyframes increase {
+  from {
+	height: 400px;
+	width: 400px;
+  }
+
+  to {
+	height: 600px;
+	width: 600px;
+  }
+}
+
+.increase_circle {
+  -webkit-animation-name: increase;
+  animation-name: increase;
+}
