--- a/css/animate.css
+++ b/css/animate.css
@@ -3568,6 +3568,11 @@
   animation-iteration-count: infinite;
 }
 
+.animated.delay-500ms {
+  -webkit-animation-delay: 500ms;
+  animation-delay: 500ms;
+}
+
 .animated.delay-1s {
   -webkit-animation-delay: 1s;
   animation-delay: 1s;
