--- a/css/style.css
+++ b/css/style.css
@@ -461,3 +461,18 @@ a {
 	width: 30%;
 	float: left;
 }
+
+.map_circle {
+	position: fixed;
+	z-index: 3;
+	transform: translate(-50%, -50%);
+	top: 50%;
+	left: 50%;
+}
+
+.map_circle_pos {
+	width: 400px;
+	height: 400px;
+	border-radius: 50%;
+	overflow: hidden;
+}
