--- a/css/style.css
+++ b/css/style.css
@@ -466,8 +466,8 @@ a {
 	position: fixed;
 	z-index: 3;
 	transform: translate(-50%, -50%);
-	top: 50%;
-	left: 50%;
+	top: 100px;
+	left: 70%;
 }
 
 .map_circle_pos {
