--- a/css/style.css
+++ b/css/style.css
@@ -443,23 +443,31 @@ a {
 .first_col {
 	width: 100%;
 	float: left;
+	position: relative;
+	z-index: 2;
 }
 
 .second_col {
 	width: 30%;
 	float: left;
 	margin-right: 30px;
+	position: relative;
+	z-index: 2;
 }
 
 .third_col {
 	width: 30%;
 	float: left;
 	margin-right: 30px;
+	position: relative;
+	z-index: 2;
 }
 
 .fourth_col {
 	width: 30%;
 	float: left;
+	position: relative;
+	z-index: 2;
 }
 
 .map_circle {
