--- a/css/style.css
+++ b/css/style.css
@@ -400,8 +400,16 @@ a {
 	margin-top: 30px;
 }
 
+.space40 {
+	margin-top: 40px;
+}
+
 .space50 {
 	margin-top: 50px;
+}
+
+.space40down {
+	margin-bottom: 40px;
 }
 
 .space50down {
@@ -500,13 +508,7 @@ a {
 	float: left;
 }
 
-.first_third {
-	width: 30%;
-	float: left;
-	margin-right: 60px;
-}
-
-.second_third {
+.first_third, .second_third {
 	width: 30%;
 	float: left;
 	margin-right: 60px;
@@ -525,6 +527,17 @@ a {
 
 .second_half {
 	width: 45%;
+	float: left;
+}
+
+.first_fourth, .second_fourth, .third_fourth {
+	width: 22%;
+	float: left;
+	margin-right: 40px;
+}
+
+.fourth_fourth {
+	width: 22%;
 	float: left;
 }
 
