--- a/css/style.css
+++ b/css/style.css
@@ -185,8 +185,8 @@ audio {
 }
 
 .circle {
-	width: 400px;
-	height: 400px;
+	width: 40vw;
+	height: 40vw;
 	border-radius: 50%;
 	overflow: hidden;
 }
