--- a/css/style.css
+++ b/css/style.css
@@ -614,27 +614,27 @@ audio {
 	margin-left: 9vw;
 	}
 	.r40y500 {
-	font-size: 1.5em;
+	font-size: 50px;
 	}
 	.back {
-	font-size: 1.5em;
+	font-size: 25px;
 	}
 	.r15b400 {
-	font-size: 1.35em;
+	font-size: 20px;
 	}
 	.r15b700 {
-	font-size: 1.4em;
+	font-size: 22px;
 	}
 	.r15w500 {
-	font-size: 1.4em;
+	font-size: 22px;
 	}
 	.r15w300 {
-	font-size: 1.5em;
+	font-size: 25px;
 	}
 	.r20y500 {
-	font-size: 2em;
+	font-size: 40px;
 	}
 	.r70w500 {
-	font-size: 1.3em;
+	font-size: 100px;
 	}
 }
