--- a/css/style.css
+++ b/css/style.css
@@ -600,7 +600,7 @@ audio {
 	height: 25vw;
 	width: 25vw;
 	}
-	.left_holder {
+	.left-holder {
 	margin-left: 9vw;
 	}
 	.right_holder {
@@ -630,7 +630,7 @@ audio {
 	margin-left: 7vw;
 	}
 	.right_holder {
-	margin_right: 7vw;
+	margin-right: 7vw;
 	}
 	.r15b400 {
 	font-size: 13px;
