--- a/css/style.css
+++ b/css/style.css
@@ -371,7 +371,7 @@ audio {
 	text-decoration: underline;
 }
 
-.back_white: {
+.back_white {
 	font-family: 'Rubik', sans-serif;
 	font-weight: 500;
 	font-size: 14px;
