--- a/css/style.css
+++ b/css/style.css
@@ -468,7 +468,7 @@ audio {
 
 .portf_group {
 	z-index: 2;
-	wdith: 80vw;
+	width: 80vw;
 	padding-left: 10vw;
 	padding-right: 10vw;
 	padding-top: 20vh;
