--- a/css/style.css
+++ b/css/style.css
@@ -744,6 +744,23 @@ color: #000000;
 	.r15b700 {
 	font-size: 18px;
 	}
+	.portf_group {
+	}
+	.first_col {
+	}
+	.second_col {
+	width: 100%;
+	margin-top: 50px;
+	}
+	.third_col {
+	width: 100%;
+	margin-top: 50px;
+	}
+	.fourth_col {
+	width: 100%;
+	margin-top: 50px;
+	margin-bottom: 50px;
+	}
 }
 
 
