--- a/css/style.css
+++ b/css/style.css
@@ -766,6 +766,9 @@ color: #000000;
 	font-size: 18px;
 	}
 	.portf_group {
+	margin-left: 15vw;
+	margin-right: 15vw;
+	padding-top: 15vh;
 	}
 	.first_col {
 	}
@@ -780,6 +783,12 @@ color: #000000;
 	width: 100%;
 	margin-top: 50px;
 	margin-bottom: 50px;
+	}
+	.disapear_on_mobile {
+	display: none;
+	}
+	.show_on_mobile {
+	display: block;
 	}
 }
 
