--- a/css/style.css
+++ b/css/style.css
@@ -790,6 +790,12 @@ color: #000000;
 	.show_on_mobile {
 	display: block;
 	}
+	.top_left {
+	background-color: #000000;
+	padding: 15px;
+	margin-top: 15px;
+	margin-left: 15px;
+	}
 }
 
 
