--- a/css/style.css
+++ b/css/style.css
@@ -692,7 +692,7 @@ color: #000000;
 	.portf_group {
 	margin-left: 25px;
 	margin-right: 25px;
-	padding-top: 20vh;
+	padding-top: calc(20vh + 200px);
 	}
 	.first_col {
 	}
@@ -772,7 +772,7 @@ color: #000000;
 	.portf_group {
 	margin-left: 10vw;
 	margin-right: 10vw;
-	padding-top: 20vh;
+	padding-top: calc(20vh + 150px);
 	}
 	.first_col {
 	}
