--- a/css/style.css
+++ b/css/style.css
@@ -689,6 +689,9 @@ color: #000000;
 	.r15b700 {
 	font-size: 18px;
 	}
+	.r40b500 {
+	font-size: 30px;
+	}
 	.portf_group {
 	margin-left: 25px;
 	margin-right: 25px;
