--- a/css/style.css
+++ b/css/style.css
@@ -887,14 +887,11 @@ color: #ffffff;
 	margin: 0px 12vw 50px 12vw;
 	}
 	.margins_three {
-	margin: 0px 0px 0px 0px;
+	margin: 0px 0px 0px 12vw;
 	}
 	.logos_rec {
 	width: 250px;
 	height: 150px;
-	}
-	.logos_sections {
-	display: none;
 	}
 }
 
