--- a/css/style.css
+++ b/css/style.css
@@ -942,6 +942,9 @@ color: #ffffff;
 	.r70b500 {
 	font-size: 50px;
 	}
+	.space30 {
+	margin-top: 15px;
+	}
 }
 
 @media (max-width: 2000px) and (min-width: 1200px) {
