--- a/css/style.css
+++ b/css/style.css
@@ -758,7 +758,7 @@ display: none;
 	margin-top: -6em;
 	}
 	.white_left {
-	margin-top: 50px;
+	margin-top: 125px;
 	height: auto;
 	}
 	.empty_right {
@@ -767,6 +767,7 @@ display: none;
 	.below_white {
 	position: relative;
 	top: 50px;
+	border-top: none;
 	}
 	.breakline {
 	display: block;
@@ -877,13 +878,13 @@ display: none;
 	width: 100vw;
 	}
 	.margins_one {
-	margin: 50px 12VW 0px 12vw;
+	margin: 50px 12VW 0px 20vw;
 	}
 	.margins_two {
-	margin: 50px 12vw 50px 12vw;
+	margin: 50px 12vw 50px 20vw;
 	}
 	.margins_three {
-	margin: 0px 0px 0px 12vw;
+	margin: 0px 0px 0px 20vw;
 	}
 	.logos_rec {
 	width: 250px;
