--- a/css/style.css
+++ b/css/style.css
@@ -948,7 +948,7 @@ display: none;
 	background-color: #f3f3f3;
 	margin-left: 20vw;
 	margin-top: -6em;
-	background: url(img/mobileshowcase.gif no-repeat center;
+	background: url(img/mobileshowcase.gif) no-repeat center;
  	background-size: cover;
 	}
 	.white_left {
